--- a/roles/scaleio-common/tasks/install_scaleio_SLES.yml
+++ b/roles/scaleio-common/tasks/install_scaleio_SLES.yml
@@ -4,7 +4,7 @@
   copy: src="{{ item }}" dest="/var/tmp/" mode="0644"
   register: file
   with_fileglob:
-    - "{{  scaleio_common_file_install_file_location }}/*{{ file_glob_name }}*"
+    - "{{  scaleio_common_file_install_file_location }}/*{{ file_glob_name }}*{{ ansible_distribution | lower }}*"
   when: ansible_distribution == "SLES"
 
 - name: list the rpm file
