changes for testing and to attempt supporting modification of existing cluster

--- a/roles/scaleio-gateway/tasks/main.yml
+++ b/roles/scaleio-gateway/tasks/main.yml
@@ -6,5 +6,5 @@
 
 - include: ../../scaleio-common/tasks/install_scaleio.yml
 
-- include: install_keepalived.yml
-  when: scaleio_gateway_is_redundant == "true"
+#- include: install_keepalived.yml
+#  when: scaleio_gateway_is_redundant
