--- a/uninstall_scaleio.yml
+++ b/uninstall_scaleio.yml
@@ -1,8 +1,8 @@
 - name: uninstall scaleio
   hosts: all
   tasks:
-  - name: install package
-    yum: name="{{ item }}" state="absent"
+  - name: uninstall package
+    package: name="{{ item }}" state="absent"
     with_items:
      - EMC-ScaleIO-lia
      - EMC-ScaleIO-sds
@@ -10,3 +10,5 @@
      - EMC-ScaleIO-callhome
      - EMC-ScaleIO-sdc
      - EMC-ScaleIO-tb
+     - EMC-ScaleIO-gateway
+     - EMC-ScaleIO-gui
