--- a/roles/scaleio-common/tasks/install_scaleio_SLES.yml
+++ b/roles/scaleio-common/tasks/install_scaleio_SLES.yml
@@ -4,7 +4,7 @@
   copy: src="{{ item }}" dest="/var/tmp/" mode="0644"
   register: file
   with_fileglob:
-    - "{{  scaleio_common_file_install_file_location }}/*{{ file_glob_name }}*{{ ansible_distribution | lower }}*"
+    - "{{  scaleio_common_file_install_file_location }}/*{{ file_glob_name }}*"
   when: ansible_distribution == "SLES"
 
 - name: list the rpm file
@@ -15,3 +15,5 @@
 - name: install package
   raw: "/var/tmp/package_wrapper.sh rpm -i {{ package_file.files[0].path }}"
   when: ansible_distribution == "SLES"
+  register: command_result
+  failed_when: "'already installed' not in command_result.stdout and command_result.rc != 0"
