add host tasks only run when the host is being passed in variables

--- a/site-add-sds.yml
+++ b/site-add-sds.yml
@@ -1,17 +1,19 @@
 # vim:ft=ansible:
 ---
 
-- hosts: all
+- hosts: localhost
   name: "set up hosts"
   tags: always
   tasks:
     - add_host:
         name: "{{ sds_host }}"
         groups: sds
+        when: sds_host is defined
 
     - add_host:
         name: "{{ mdm_host }}"
         groups: mdm
+        when: mdm_host is defined
 
 - hosts: all
   name: "set up facts"
