--- a/remove_node_scaleio.yml
+++ b/remove_node_scaleio.yml
@@ -1,4 +1,31 @@
 ---
+- hosts: localhost
+  name: "Set up hosts"
+  tasks:
+    - set_fact: sds_hosts_obj="{{ sds_hosts  | default({}) }}"
+    - add_host:
+        name: "{{ item.ip }}"
+        groups: sds
+        ansible_ssh_user: "{{ item.user }}"
+        ansible_ssh_pass: "{{ item.pass }}"
+      with_items: "{{ sds_hosts_obj }}"
+
+    - set_fact: sdc_hosts_obj="{{ sdc_hosts  | default({}) }}"
+    - add_host:
+        name: "{{ item.ip }}"
+        groups: sdc
+        ansible_ssh_user: "{{ item.user }}"
+        ansible_ssh_pass: "{{ item.pass }}"
+      with_items: "{{ sdc_hosts_obj }}"
+
+    - set_fact: mdm_hosts_obj="{{ mdm_hosts  | default({}) }}"
+    - add_host:
+        name: "{{ item.ip }}"
+        groups: mdm
+        ansible_ssh_user: "{{ item.user }}"
+        ansible_ssh_pass: "{{ item.pass }}"
+      with_items: "{{ mdm_hosts_obj }}"
+
 - hosts: all
   tasks:
   - set_fact: scaleio_mdm_primary_ip="{{ hostvars[groups['mdm'][0]]['ansible_'+scaleio_interface]['ipv4']['address'] }}"
