--- a/roles/scaleio-sdc/tasks/remove-sdc.yml
+++ b/roles/scaleio-sdc/tasks/remove-sdc.yml
@@ -7,10 +7,10 @@
   
 - name: Unmap Volume from SDC
   command: scli --unmap_volume_from_sdc --mdm_ip {{ scaleio_mdm_ips }} --volume_name "{{ item }}" --sdc_ip {{ hostvars[inventory_hostname]['ansible_'+scaleio_interface]['ipv4']['address'] }} --i_am_sure
-  register: command_result
-  failed_when: "'The volume is not mapped to SDC' not in command_result.stderr and command_result.rc != 0"  
-  delegate_to: "{{ scaleio_mdm_primary_hostname }}"
-  with_items: "{{ scaleio_sdc_volume_names_obj }}
+    register: command_result
+    failed_when: "'The volume is not mapped to SDC' not in command_result.stderr and command_result.rc != 0"  
+    delegate_to: "{{ scaleio_mdm_primary_hostname }}"
+  with_items: "{{ scaleio_sdc_volume_names_obj }}"
 
 - name: Set Restricted mode on MDM
   command: scli --set_restricted_sdc_mode --restricted_sdc_mode enabled
